# Magic

./: .gitignore  .gitmodules  CMakeLists.txt  gen_project.sh
Magic/: CmakeLists.txt
Magic/src/: Application.cpp  Application.h  Magic.h  magicpch.h
Magic/src/Magic/: magicpch.cpp
Magic/src/Magic/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  KeyCodes.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Math.cpp  Math.h  PlatformDetection.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Magic/src/Magic/Event/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Magic/src/Magic/Graphics/: Buffer.cpp  Buffer.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Graphics.cpp  Graphics.h  GraphicsContext.cpp  GraphicsContext.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Magic/src/Magic/ImGui/: ImGui.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Magic/src/Magic/Pipeline/: Camera.cpp  Camera.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Transform.cpp  Transform.h
Magic/src/Magic/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
Magic/src/Magic/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
Magic/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
Magic/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
MagicCLR/: .gitignore  CMakeLists.txt
MagicCLR/Src/Magic/: Application.cs  Debug.cs  InternalCalls.cs
MagicCLR/Src/Magic/Scene/: Components.cs  Entity.cs  Vector3.cs
Resources/Scripts/Debug/net5.0/: MagicCLR.deps.json  MagicCLR.runtimeconfig.dev.json
Sample/: CMakeLists.txt
Sample/assets/font/: BitterPro-Regular.arfont
Sample/assets/scene/: test.magic
Sample/assets/shader/: font.glsl  post_inverse.glsl  pure_color.glsl
Sample/src/: SampleApplication.cpp  SampleApplication.h  SampleLayer.cpp  SampleLayer.h
